feat(position): changing position methods
